index.css
/* Global styles */

html {
  font-size: 18px;
  color: #381460;
  overflow-x: hidden;
  margin: -10px -10px;
  background: #fefefa;
  font-family: "Nunito", sans-serif;
  line-height: 1.8;
}

body {
  margin-bottom: -10px;
}

p {
  text-align: justify;
}

main {
  display: grid;
  grid-gap: 5%;
  grid-template-columns: 20% 75%;
  grid-template-areas: "side-section bod";
}

a {
  display: block;
  text-decoration: none;
  cursor: pointer;
  pointer-events: auto;
  margin-bottom: 1ch;
  color: #381460;
}

a:visited {
  color: #381460;
}

a:hover {
  color: #b21f66;
}

ul {
  padding-bottom: 1em;
}

button {
  background-color: transparent;
  border: none;
  cursor: pointer;
  pointer-events: auto;
}

div > section {
  margin-top: 15vh;
  margin-bottom: 15vh;
}

/* Page layout */
.bod {
  display: grid;
  grid-area: bod;
  padding-top: 10vh;
  padding-right: 20vw;
}

/* Side area */

.side-section {
  display: grid;
  grid-template-columns: 18vw;
  grid-template-rows: 33vh 33vh 33vh;
  position: fixed;
  height: 100%;
  background-color: transparent;
}

.photo {
  width: 60%;
  margin: auto;
}

/* Navigation */

nav {
  font-family: "Asap", sans-serif;
  font-weight: 700;
  padding-top: 10%;
  margin-left: 15%;
}

nav > a {
  border-bottom: 3px solid #fefefa;
  width: 100px;
}

.focused-section-link {
  border-bottom: 3px solid #b21f66;
  width: 100px;
}

/* Main area */

.section {
  opacity: 0;
  scroll-margin-top: 5vh;
}

h1 {
  font-family: "Asap";
  font-size: 50px;
}

h2 {
  font-family: "Asap";
  font-size: 30px;
}

h3,
h4 {
  font-size: 24px;
  color: #381460;
  font-family: "Nunito", sans-serif;
  font-weight: "800";
}

.line {
  border-bottom: 5px solid #a07dcf;
  width: 300px;
}

/* Main area - About */

.blurb {
  display: none;
  width: 90%;
  padding-bottom: 10vh;
}

/* Main area - Skills and Experience */

h3.skills-heading {
  text-decoration: underline;
  cursor: pointer;
  pointer-events: auto;
}

h3.skills-heading:before {
  content: "\25BA";
  color: #03a090;
  padding-right: 1ch;
  display: inline-block;
}

h3.expanded:before {
  content: "\25BC";
}

.info {
  display: none;
}

#tech-skills > li {
  padding-bottom: 1em;
}

.experience {
  list-style-type: none;
}

.experience ul {
  list-style-type: disc;
}

.experience > li > ul {
  padding-inline-start: 1.5vw;
}

/* Main area - Projects */

.card {
  box-shadow: -4px -4px 20px 0 #949494;
  border-radius: 5px;
  margin: 50px 0 70px 0;
  padding: 40px 40px 60px 40px;
  width: 100%;
}

ul.project-tech li {
  display: inline;
  font-size: 20px;
}

ul.project-tech {
  margin-top: -25px;
  margin-left: -40px;
}

.card > p {
  text-align: justify;
}
.card > div > div > p {
  text-align: justify;
  padding-right: 1ch;
  flex-basis: 50%;
}

.show-more-button {
  font-family: "Nunito", sans-serif;
  font-size: 16px;
  text-decoration: underline;
  font-size: 20px;
  font-weight: bold;
  color: #381460;
  padding-left: 0;
}

.show-more-button:hover {
  color: #b21f66;
}

.budding-demo-card {
  box-shadow: -4px -4px 20px 0 #949494;
  border-radius: 5px;
  width: 350px;
  height: 520px;
  background-color: #fefefa;
  margin-left: 2ch;
  margin-bottom: 4ch;
}

#budding-more-info {
  display: flex;
}

.project-links > a {
  display: inline-block;
  margin-bottom: 20px;
  font-weight: bold;
  font-size: 18px;
  text-decoration: underline;
}

.nc-news-demo-card {
  box-shadow: -4px -4px 20px 0 #949494;
  border-radius: 5px;
  background-color: #fefefa;
  height: 500px;
  margin: 4ch 1ch;
}

.project-links {
  display: flex;
  justify-content: space-around;
}

/* Main area - Contact */

.contact-grid {
  display: grid;
  grid-template-columns: 40% 110%;
  grid-gap: 10%;
}

.contact-grid > .card {
  margin-top: 15px;
}

.logo {
  height: 50px;
  margin-top: -60px;
  opacity: 0;
  display: inline-block;
  position: relative;
}

.social-logos {
  margin: 10vh 0;
  display: flex;
}

div > a {
  display: inline;
  margin-right: 10px;
}

.twitter-border {
  height: 301px;
  width: 249px;
  padding: 1px;
  border-radius: 2%;
  box-shadow: 0px 0px 20px 4px #949494;
}

.float-container {
  margin: 15px 0;

  width: 100%;
}

form {
  background-color: #ccbae3;
  color: #03776a;
  padding: 5%;
  width: 50%;
  box-shadow: -4px -4px 20px 0 #949494;
  border-radius: 5px;
  margin-top: 3ch;
}

.contact-form-heading {
  text-align: center;
  margin-top: -5px;
  font-family: "Asap", sans-serif;
}

label {
  display: block;
  position: absolute;
  padding-left: 0.5em;
  padding-top: 7px;
  font-family: "Asap", sans-serif;
  height: 20px;
}

label[for="message"] {
  display: block;
  position: absolute;
  width: 69%;
  background-color: inherit;
  margin-top: 1px;
  margin-left: 1px;
  padding-bottom: 20px;
  z-index: 1;
}

.label-background {
  position: absolute;
  background-color: lightgoldenrodyellow;
  margin-top: -1.5px;
  z-index: 0;
  width: 42%;
}

input {
  padding-top: 13px;
  padding-bottom: 10px;
  padding-right: 0.5em;
  padding-left: 4em;
  font-family: "Work Sans", sans-serif;
  font-size: 18px;
  color: #381460;
  width: 70%;
  background-color: #fafad2;
  border: 0px solid;
}

input:focus {
  outline: 2px solid #b21f66;
}

textarea {
  padding-top: 2.5em;
  font-size: 16px;
  color: #381460;
  font-family: "Work Sans", sans-serif;
  font-size: 18px;
  resize: none;
  padding-left: 0.5em;
  padding-right: 0.5em;
  background-color: lightgoldenrodyellow;
  border: 0px solid;
  width: 100%;
  height: 10em;
  box-sizing: border-box;
}

textarea:focus {
  outline: 3px solid #b21f66;
}

.invalid {
  background-color: lightpink;
}

.invalid-name,
.invalid-email,
.invalid-message {
  color: #8c1d2a;
  display: none;
}

form button {
  background-color: #03b5a3;
  padding: 20px;
  font-size: 20px;
  border-radius: 20px;
  margin: auto;
  font-family: "Asap", sans-serif;
  color: #fafad2;
  display: block;
  margin-bottom: 20px;
}

input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
textarea:-webkit-autofill,
textarea:-webkit-autofill:hover,
textarea:-webkit-autofill:focus,
select:-webkit-autofill,
select:-webkit-autofill:hover,
select:-webkit-autofill:focus {
  -webkit-text-fill-color: #381460;
  transition: background-color 5000s ease-in-out 0s;
}

form button:hover {
  background-color: #b21f66;
}

form button:focus {
  outline: 2px solid #b21f66;
}

/* Footer */

footer {
  left: 0;
  bottom: 0;
  height: 150px;
  width: 100vw;
  text-align: center;
  background: linear-gradient(0deg, #a07dcf 0%, #fefefa 100%);
}

footer > p {
  font-size: 16px;
  color: #381460;
  padding-top: 50px;
  text-align: center;
}

#scroll-top-button {
  display: none;
}

@media (max-width: 950px) {
  /*Global styles*/
  html {
    padding: 0;
  }

  .line {
    margin: auto;
  }

  /* Page layout */
  #wrapper {
    position: absolute;
    width: auto;
    overflow-x: hidden;
    margin: 0;
    display: grid;
    grid-template-columns: 100%;
    grid-auto-rows: max-content;
    grid-gap: 0;
    grid-template-areas: "side-section" "main";
    margin-bottom: -10px;
    padding: 0;
  }

  main {
    grid-area: main;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .bod {
    padding-right: 0;
    width: 90%;
    padding-top: 0;
  }

  /* Header and navigation */

  header {
    background-color: #c7b0de;
    margin-top: -10px;
  }

  nav {
    width: 100%;
    padding: 1ch 0;
    text-align: center;
    margin-left: 0px;
    flex-wrap: wrap;
    flex: 1 0 auto;
  }

  .side-section {
    display: flex;
    position: static;
    grid-area: side-section;
    font-size: 18px;
    justify-content: space-evenly;
    flex-wrap: wrap;
    width: 100vw;
    padding: 0;
  }

  nav > a {
    display: block;
    width: auto;
    border: none;
  }

  nav > a:hover {
    background-color: #fefefa;
  }

  .focused-section-link {
    width: auto;
    border: none;
  }

  .photo {
    padding-top: 10%;
    width: 20%;
    height: 20%;
    margin: 0;
  }

  /* Main area - About */

  h1,
  h2 {
    text-align: center;
  }

  p.blurb {
    padding: 0;
    padding-bottom: 10vh;
    width: auto;
  }

  /* Main area - Skills and Experience */

  .experience {
    list-style-type: none;
    padding-inline-start: 10vw;
  }

  .experience > li > ul {
    padding-inline-start: 5vw;
  }

  /* Main area - Projects */

  .card {
    box-shadow: -4px -4px 20px 0 #949494;
    border-radius: 5px;
    padding: 40px 40px 60px 40px;
    width: 70%;
    margin: 50px auto;
  }

  #budding-more-info {
    display: block;
  }

  #budding-more-info > p {
    padding: 0;
  }

  .project-links,
  .project-links > a {
    display: block;
    text-align: center;
  }

  .budding-demo-card {
    box-shadow: -4px -4px 20px 0 #949494;
    border-radius: 5px;
    width: 90%;
    height: 520px;
    background-color: #fefefa;
  }

  .nc-news-demo-card {
    box-shadow: -4px -4px 20px 0 #949494;
    border-radius: 5px;
    background-color: #fefefa;
    height: 30vh;
  }

  /* Main area - Contacts */

  .contact-grid {
    display: block;
  }

  .contact-grid > .card {
    margin-top: 15px;
  }

  .logo {
    height: 50px;
    margin-top: -60px;
    opacity: 0;
    display: inline-block;
    position: relative;
  }

  .social-logos {
    margin: 40px 0;
    padding: 0 15%;
    display: flex;
    justify-content: space-between;
  }

  form {
    background-color: #ccbae3;
    color: #03776a;
    padding: 5%;
    width: 80%;
  }

  form.card {
    width: 70%;
    margin: 0;
    margin-right: 0;
    margin-top: 0;
  }

  input {
    padding-top: 13px;
    padding-bottom: 10px;
    font-family: "Work Sans", sans-serif;
    font-size: 18px;
    color: #381460;
    padding-right: 0.5em;
    background-color: #fafad2;
    border: 0px solid;
  }

  textarea {
    padding-top: 2.5em;
    font-size: 16px;
    color: #381460;
    font-family: "Work Sans", sans-serif;
    font-size: 18px;
    resize: none;

    background-color: lightgoldenrodyellow;
    border: 0px solid;
    height: 10em;
  }

  label {
    font-family: "Asap", sans-serif;
    height: 20px;
  }

  .label-background {
    width: 100%;
  }

  .twitter-border {
    height: 301px;
    width: 249px;
    padding: 1px;
    border-radius: 2%;
    box-shadow: 0px 0px 20px 4px #949494;
    margin: auto;
    margin-bottom: 10vh;
  }

  .contact-grid > form {
    margin: auto;
    box-shadow: -4px -4px 20px 0 #949494;
    border-radius: 5px;
    margin-top: 3ch;
  }

  .contact-form-heading {
    margin-left: 0;
  }

  /* Footer */

  footer {
    display: block;
    padding-bottom: 30px;
    width: 100%;
  }

  footer > p {
    margin: auto;
    font-size: 16px;
    color: #381460;
    padding-top: 10%;
    width: 70%;
    text-align: center;
  }

  #scroll-top-button {
    height: 40px;
    width: 40px;
    position: fixed;
    bottom: 3vh;
    right: 5vw;
    z-index: 99;
    border-radius: 50%;
    outline: none;
    background-color: #03a090;
    color: white;
    cursor: pointer;
    font-size: 25px;
  }

  #scroll-top-button:hover {
    background-color: #b21f66;
  }
}

